# AutoAI

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-prd.md
src/qa_agents/: __init__.py  artifact_exporters.py  automation_agent.py  automation_cli.py  automation_exporters.py  automation_runner_agent.py  automation_runner_cli.py  cli.py  config.py  defect_agent.py  defect_cli.py  design_agent.py  design_cli.py  dom_agent.py  dom_cli.py  exporters.py  input_loader.py  mcp_server.py  models.py  ollama.py  planning_agent.py  planning_cli.py  progress.py  prompts.py  reporting_agent.py  self_healing_agent.py  source_utils.py  test_case_agent.py  test_management_agent.py  test_management_cli.py  web.py
src/qa_agents/sources/: __init__.py  figma.py  files.py
src/qa_agents/static/: index.html
tests/: test_agent.py  test_automation_agent.py  test_automation_exporters.py  test_automation_runner.py  test_dom_and_management_agents.py  test_exporters.py  test_new_agents.py  test_reporting_agent.py  test_sources.py  test_web.py
